2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: ([-writeToFile:atomically:]) Removed bogus line
	which deleted files when it shouldn't.
	* Source/NSUserDefaults.m: Use distributed lock to ensure that there
	is no possible window when the defaults file is invalid ... not all
	systems guarantee that the rename() system call is atomic.
	* Source/NSArray.m: New MacOS-X method ([-initWithArray:copyItems:])
 
2002-08-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/WindowsFileHandle.m: Removed ... no longer used.
	* Source/GSHTTPURLHandle.m: Don't use getpid() ... not portable.
	* Tools/gdomap.c: Don't use getuid() under windoze. 

2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: ([-initFileURLWithPath:]) check to see if path is
	a directory and append a trailing slash if necessary.  Remove hack
	to refrain from stripping last patch component in file URLs.

2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Hacks for compatibility with MacOS-X in returning
	path of a file URL ... the RFC says we should only return a path
	for a generic URL (scheme://user:passwd@host:port/path#frag?query)
	which a file URL certainly isn't.  However, for compatibility we
	now treat a file URL more like a generic one.
	Also when creating absolute file URLs from base plus relative,
	the MacOS-X code doesn't strip the last path component of the
	base URL as it should ... we emulate that too.

2002-08-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix typo ... missing closing brace under
	windoze. Reported by Alex Stockdale.

2002-08-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-replacementObjectForPortCoder:])
	Documented method and removed unused/unwanted code dealing with
	NSDistantObject (NSDistantObject overrides the method).

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSObject.m: Fix silly typo.

2002-08-20  Alexander Malmberg <alexander@malmberg.org>
