@@ -5,7 +5,8 @@
 	* Source/NSUserDefaults.m: Use distributed lock to ensure that there
 	is no possible window when the defaults file is invalid ... not all
 	systems guarantee that the rename() system call is atomic.
-	* Source/NSArray.m: New MacOS-X method ([-initWithArray:copyItems:])
+	* Source/NSArray.m: New MacOS-X methods ([-initWithArray:copyItems:])
+	([-exchangeObjectAtIndex:withObjectAtIndex:])
  
 2002-08-25  Richard Frith-Macdonald <rfm@gnu.org>
 
